--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "react-native-woolf",
   "license": "0BSD",
   "version": "1.0.0",
-  "main": "index.ts",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,35 +9,47 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.0.6",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/stack": "^7.0.5",
     "@reduxjs/toolkit": "^2.3.0",
-    "expo": "~52.0.9",
-    "expo-camera": "^16.0.6",
+    "expo": "^52.0.11",
+    "expo-camera": "~16.0.7",
     "expo-font": "^13.0.1",
-    "expo-location": "^18.0.2",
-    "expo-media-library": "^17.0.2",
-    "expo-splash-screen": "^0.29.12",
+    "expo-location": "~18.0.2",
+    "expo-media-library": "~17.0.3",
+    "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
-    "firebase": "^11.0.2",
-    "react": "18.3.1",
-    "react-native": "0.76.2",
-    "react-native-gesture-handler": "^2.21.2",
-    "react-native-maps": "^1.20.0",
-    "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^4.2.0",
-    "react-native-svg": "^15.9.0",
+    "firebase": "^11.0.1",
+    "react": "^18.3.1",
+    "react-native": "^0.76.3",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "1.18.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "expo-dev-client": "~5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
-    "typescript": "^5.3.3"
+    "@react-native-community/cli": "latest",
+    "@types/react": "~18.3.12"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "redux-persist",
+          "@reduxjs/toolkit",
+          "firebase",
+          "react-redux"
+        ]
+      }
+    }
+  }
 }
